--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fontsource/ubuntu": "^4.5.3",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
